2/3 done, added a docker, environmental variables, added requirements.txt

--- a/stripeapi/main/templates/main/get_item.html
+++ b/stripeapi/main/templates/main/get_item.html
@@ -28,7 +28,7 @@
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="{% static 'main/images/phone.png' %}" class="img-fluid rounded-start"
+                            <img src="{% static 'main/images/product.jpg' %}" class="img-fluid rounded-start"
                                  alt="cool phone">
                         </div>
                         <div class="col-md-8">
